--- a/Dienstgeber/package.json
+++ b/Dienstgeber/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "date-and-time": "^0.6.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
     "request": "^2.88.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "weeknumber": "^1.1.1"
   }
 }
