--- a/Dienstnutzer/package.json
+++ b/Dienstnutzer/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "jquery": "^3.4.1",
     "morgan": "~1.9.1",
+    "request": "^2.88.0",
     "socket.io": "^2.2.0"
   }
 }
